add: adding some icon for keranjang page, and CardBarang component

--- a/app.json
+++ b/app.json
@@ -48,7 +48,8 @@
           "recordAudioAndroid": true
         }
       ],
-      "expo-sqlite"
+      "expo-sqlite",
+      "expo-font"
     ],
     "experiments": {
       "typedRoutes": true
