--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.3",
+    "react-native-date-picker": "^5.0.13",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-notificated": "^0.1.7",
     "react-native-reanimated": "~3.17.4",
