--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native": "0.79.3",
     "react-native-date-picker": "^5.0.13",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-notificated": "^0.1.7",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "^5.4.0",
