--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "tailwindcss": "^3.4.17",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "@shopify/flash-list": "1.7.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
